<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="laboratory">Laboratory</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="consultation">Consultation</string>
    <string name="homecare">Home Care</string>
    <string name="title_activity_laboratory">LaboratoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="laboratory_tests">Laboratory Tests</string>
    <string name="cart_items">   Here are items present on your cart.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_reg">Login and Register Pages</string>
    <string name="title_activity_auth">AuthActivity</string>
</resources>